<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/signup_bg">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/crossImgView"
            android:layout_gravity="center"
            android:src="@drawable/cross_icon"
            android:contentDescription="@string/content_desc"/>
    </FrameLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.5"
        android:layout_gravity="center_horizontal">

        <com.and.lovelivesmatter.customviews.RobotoLightEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:ems="10"
            android:id="@+id/emailEditTxt"
            android:singleLine="true"
            android:gravity="center"
            android:paddingLeft="22dp"
            android:paddingRight="22dp"
            android:background="@drawable/edt_txt_selector"
            android:layout_gravity="center_horizontal"
            android:textSize="13sp"
            android:textColor="@color/sign_up_txt_color"
            android:textColorHint="@color/sign_up_txt_color"/>

        <com.and.lovelivesmatter.customviews.RobotoLightEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:ems="10"
            android:id="@+id/passwordEditTxt"
            android:singleLine="true"
            android:gravity="center"
            android:paddingLeft="22dp"
            android:paddingRight="22dp"
            android:background="@drawable/edt_txt_selector"
            android:layout_gravity="center_horizontal"
            android:textSize="13sp"
            android:textColor="@color/sign_up_txt_color"
            android:textColorHint="@color/sign_up_txt_color"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>

        <com.and.lovelivesmatter.customviews.ArapeyRegularButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:id="@+id/signInBtn"
            android:textSize="15sp"
            android:textColor="@color/landing_btn_txt_color"
            android:background="@drawable/next_button_bg"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>

        <com.and.lovelivesmatter.customviews.RobotoLightTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cant_access"
            android:textSize="13sp"
            android:id="@+id/forgotPasswordTxtView"
            android:textColor="@color/sign_up_txt_color"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>
</LinearLayout>